# polkadot-ethereum

bridgerelayer/cmd/chains/ethereum/: router.go
ethereum/: package.json
parachain/pallets/bridge/src/: lib.rs
parachain/pallets/polkaerc20-app/: Cargo.toml
parachain/pallets/polkaerc20-app/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/polkaeth-app/: Cargo.toml
parachain/pallets/polkaeth-app/src/: lib.rs  mock.rs  tests.rs
parachain/primitives/core/src/: lib.rs
parachain/primitives/ethereum/: Cargo.toml
parachain/primitives/ethereum/src/: lib.rs
parachain/runtime/src/: lib.rs
