[package]
name = "artemis-ethereum"
version = "0.1.0"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
rlp = { version = "0.4", default-features = false }
ethbloom = { version = "0.8", default-features = false }
ethereum-types = { version = "0.9.2", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[features]
default = ["std"]
std = [
	"rustc-hex/std",
	"serde/std",
	"ethbloom/std",
	"ethereum-types/std",
	"codec/std",
	"rlp/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"libsecp256k1/std",
]